--- a/Basic/Bernstein_Vazirani_algorithm_1.ipynb
+++ b/Basic/Bernstein_Vazirani_algorithm_1.ipynb
@@ -293,7 +293,7 @@
     "    counts = result.get_counts()\n",
     "    print(counts)\n",
     "\n",
-    "secret_number = int(input(\"enter number: \"))\n",
+    "secret_number = int(input(\"enter number(digits should be 0 or 1): \"))\n",
     "find_secret_number(secret_number)"
    ]
   },
