--- a/Basic/create_a_gate_and_run_on_local_device_and_ibm_system-1.ipynb
+++ b/Basic/create_a_gate_and_run_on_local_device_and_ibm_system-1.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MY_API_TOKEN = \"b32678329f7f6dd426b8cf18f20bea23c2cd056b0bee2b4bcf49744b612e598f20f7170a8da4bfd99b009b6fa59d596edea7a6926fd388be158843d8ef98414a\"\n",
+    "MY_API_TOKEN = \"b32678329f7f6dd426b8cf18f20bea23c2cd056b0bee2b4bcf49744b612e598f20f7170a8da4bfd99b009b6fa59d596edea7a6926fd388be158843d8e******\"\n",
     "IBMQ.save_account(MY_API_TOKEN, overwrite=True)"
    ]
   },
